# fsr_experiments

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: exp_conf.prototxt  exp_conf_letters.prototxt  exp_conf_new_letters.prototxt  exp_conf_short soft.prototxt  exp_conf_short.prototxt  exp_conf_short_soft.prototxt  exp_conf_soft_object.prototxt  exp_conf_test.prototxt  fsr_experiments.yaml  position.txt
launch/: fsr_experiments.launch.py  fsr_experiments.rviz
proto/: CMakeLists.txt  exp_conf.proto
src/: exp_action.hpp  fsr_experiments.cpp  fsr_experiments.hpp
test_trajectory/: niforce_pb2.py  test_data.ipynb  test_data_c_rigid.ipynb  test_data_c_soft.ipynb  test_data_cmd.ipynb  test_data_d.ipynb  test_data_new.ipynb  test_data_new_wave.ipynb  test_data_q.ipynb  test_traj.ipynb
